# aei-cli

./: Cargo.toml  LICENSE  README.md
aei-framework/: Cargo.toml
aei-framework/src/: lib.rs
src/: main.rs
src/commands/: mod.rs  version.rs
tests/: version.rs
